Kosmetické úpravy na přihlašování, whitespace-fix... Výměna obrázků login/logout + padding v css V dlouho jsem nemohl najít, kde se bere prázdný flm, tak jsem do něj přidal informaci o tom, odkud je volaný. Díky tomu jsem objevil ve funkci getHashDB v database.php volání, tak jsem k němu přidal záhlaví.
Z hlavního render.php jsem vyhodil rozhodovací logiku a přesunul ji do simpleauth.php (a teď tím pádem dělá tato knihovna malinko i renderování). Šablona render.php přestávala vypadat jako html...

--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,15 @@ div#footer {
   height: 56px;
   line-height: 56px;
   text-align: right;
-  padding-right: 24px;
   font-size: 13px;
   text-shadow: #fff 0 0 2px;
   background-image: url("../img/design/spock-foot.png"); 
 }
 div#footer img {
   vertical-align: middle;
+  margin: 0 8px;
+}
+div#footer img.author-jar {
   margin: 0 8px 0 12px;
 }
 
